# moodle_sdk

./: .env.example  .gitignore  README.md  debug_course.py  future.md  pyproject.toml  test_settings.py
analytics/: engagement_analytics.py  grade_analytics.py  progress_analytics.py
cli/: main.py  output.py
cli/commands/: admin.py  categories.py  content.py  courses.py  enrollments.py  grades.py  logs.py  progress.py  sql.py  userfields.py  users.py
client/: exceptions.py  moodle_client.py  query_engine.py  query_parser.py  sql_client.py  sql_exceptions.py
config/: settings.py
docs/: usage.md
schemas/: __init__.py  activity.py  admin.py  category.py  content.py  course.py  enrollment.py  grade.py  progress.py  reset.py  user.py  userfield.py
services/: __init__.py  activity_service.py  admin_service.py  category_service.py  content_service.py  course_service.py  enrollment_service.py  grade_service.py  progress_service.py  reset_service.py  user_service.py  userfield_service.py
unit/: test_course_service.py
utils/: logging.py  transformers.py
