[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moodle-sdk"
version = "0.1.0"
description = "Headless LMS SDK for Moodle REST API"
readme = "README.md"
authors = [
    {name = "Moodle SDK Team", email = "sdk@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "typer[all]>=0.9.0",
    "rich>=13.5.0",
    "structlog>=24.1.0",
    "python-dateutil>=2.8.2",
    "tenacity>=8.2.0",
    "numpy",
    "python-json-logger"

]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "respx>=0.20.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.scripts]
moodlectl = "cli.main:app"

[tool.setuptools]
packages = [
    "analytics",
    "cli",
    "cli.commands",
    "client",
    "config",
    "schemas",
    "services",
    "utils",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "C4", "ARG"]
ignore = []

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests", "unit"]
python_files = "test_*.py"
asyncio_mode = "auto"